SimpleDbTest, selectIn pass